tests/invalid/strings/escaped_end_quote.rs
/*
compilationExitCode: 1
*/

main(): i32{
    string: [i8, 19] = "Hello, World!\";
    return 0;
}